--- a/Vistas/MainWindow.xaml
+++ b/Vistas/MainWindow.xaml
@@ -3,6 +3,6 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="MainWindow" Height="350" Width="525">
     <Grid>
-        
+        <Label Content="hola mundooo" Height="52" HorizontalAlignment="Left" Margin="160,71,0,0" Name="label1" VerticalAlignment="Top" Width="87" />
     </Grid>
 </Window>
