--- a/Vistas/MenuAdmin.xaml
+++ b/Vistas/MenuAdmin.xaml
@@ -1,8 +1,19 @@
 ﻿<Window x:Class="Vistas.Window1"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Window1" Height="300" Width="300">
+        Title="Main Admin" Height="300" Width="400">
     <Grid>
-        
+        <Menu Margin="0,0,0,237">
+            <MenuItem Header="_Usuarios">
+                <MenuItem Header="_Agregar Usuarios"></MenuItem>
+                <MenuItem Header="_Modificar Usuario"></MenuItem>
+                <MenuItem Header="_Eliminar Usuario"></MenuItem>
+            </MenuItem>
+            
+            <MenuItem Header="_Peliculas"></MenuItem>
+            <MenuItem Header="_Butacas"></MenuItem>
+            <MenuItem Header="_Proyecciones"></MenuItem>
+
+        </Menu>
     </Grid>
 </Window>
