--- a/Vistas/MenuAdmin.xaml
+++ b/Vistas/MenuAdmin.xaml
@@ -1,23 +1,41 @@
 ﻿<Window x:Class="Vistas.Window1"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Main Admin" Height="300" Width="400" Background="#FFCEF5C3">
+        Title="Main Admin" Height="300" Width="500">
     <Grid>
-        <Menu Margin="0,0,0,237" FontFamily="Showcard Gothic" FontSize="14" Background="#FF8ACE6C">
+        <Menu Margin="0,0,0,230" FontFamily="Showcard Gothic" FontSize="14" Background="#FFD1D1D1">
             <MenuItem Header="_Usuarios">
+                <MenuItem.Icon>
+                    <Image Source="/Vistas;component/Images/users.jpg" Height="Auto" Width="Auto"></Image>
+                </MenuItem.Icon>
                 <MenuItem Header="_Agregar Usuarios"></MenuItem>
                 <MenuItem Header="_Modificar Usuario"></MenuItem>
                 <MenuItem Header="_Eliminar Usuario"></MenuItem>
             </MenuItem>
             
             <MenuItem Header="_Peliculas">
+                <MenuItem.Icon>
+                    <Image Source="/Vistas;component/Images/descarga%20%284%29.jpg"></Image>
+                </MenuItem.Icon>
                 <MenuItem Header="_Agregar Peliculas"></MenuItem>
                 <MenuItem Header="_Modificar Peliculas"></MenuItem>
                 <MenuItem Header="_Eliminar Pelicula"></MenuItem>
             </MenuItem>
-            <MenuItem Header="_Butacas"></MenuItem>
-            <MenuItem Header="_Proyecciones"></MenuItem>
+            <MenuItem Header="_Butacas">
+                <MenuItem.Icon>
+                    <Image Source="/Vistas;component/Images/images.jpg"></Image>
+                </MenuItem.Icon>
+            </MenuItem>
+           
+            <MenuItem Header="_Proyecciones">
+                <MenuItem.Icon>
+                    <Image Source="/Vistas;component/Images/images%20%283%29.jpg"></Image>
+                </MenuItem.Icon>
+            </MenuItem>
 
         </Menu>
     </Grid>
+    <Window.Background>
+        <ImageBrush ImageSource="/Vistas;component/Images/descarga%20%282%29.jpg" />
+    </Window.Background>
 </Window>
