--- a/Vistas/MenuAdmin.xaml
+++ b/Vistas/MenuAdmin.xaml
@@ -1,7 +1,7 @@
-﻿<Window x:Class="Vistas.Window1"
+﻿<Window x:Class="Vistas.MenuAdmin"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Main Admin" Height="300" Width="500">
+        Title="Menu Admin" Height="300" Width="500">
     <Grid>
         <Menu Margin="0,0,0,230" FontFamily="Showcard Gothic" FontSize="14" Background="#FFD1D1D1">
             <MenuItem Header="_Usuarios">
