--- a/Vistas/MiMenu.xaml
+++ b/Vistas/MiMenu.xaml
@@ -1,8 +1,29 @@
 ﻿<Window x:Class="Vistas.MiMenu"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MiMenu" Height="300" Width="300">
+        Title="Menu Admin" Height="601" Width="756"
+        WindowStartupLocation="CenterScreen"
+         Icon="images/cine.ico" >
     <Grid>
-        
+
+       
+
+
+
+        <StackPanel Height="562" Margin="0,0,-12,0" Name="stackPanel2" VerticalAlignment="Top" Grid.ColumnSpan="2">
+            <StackPanel.Background>
+                <ImageBrush ImageSource="/Vistas;component/images/prueba7.jpg" />
+                
+            </StackPanel.Background>
+            
+            <Menu Margin="10" Foreground="White" Background="Transparent" Name="menu1" Height="100" Width="728">
+                <Image  Height="86" Name="image1" Stretch="Fill" Width="128" Source="/Vistas;component/images/CIME%20OPERA.png" ImageFailed="image1_ImageFailed" />
+                <MenuItem Header="Usuario" Margin="10 " FontSize="20" />
+                <MenuItem Header="Pelicula" Margin="10" FontSize="20" />
+                <MenuItem Header="Butaca" Margin="10" FontSize="20" />
+                <MenuItem Header="Proyecciones" Margin="10" FontSize="20" />
+            </Menu>
+           
+        </StackPanel>
     </Grid>
 </Window>
