--- a/Vistas/MiMenu.xaml
+++ b/Vistas/MiMenu.xaml
@@ -6,24 +6,32 @@
          Icon="images/cine.ico" >
     <Grid>
 
-       
 
 
 
-        <StackPanel Height="562" Margin="0,0,-12,0" Name="stackPanel2" VerticalAlignment="Top" Grid.ColumnSpan="2">
+        <StackPanel  Height="562" Margin="0,0,-12,0" Name="stackPanel2" VerticalAlignment="Top" Grid.ColumnSpan="2">
             <StackPanel.Background>
                 <ImageBrush ImageSource="/Vistas;component/images/prueba7.jpg" />
-                
+
             </StackPanel.Background>
-            
-            <Menu Margin="10" Foreground="White" Background="Transparent" Name="menu1" Height="100" Width="728">
-                <Image  Height="86" Name="image1" Stretch="Fill" Width="128" Source="/Vistas;component/images/CIME%20OPERA.png" ImageFailed="image1_ImageFailed" />
-                <MenuItem Header="Usuario" Margin="10 " FontSize="20" />
-                <MenuItem Header="Pelicula" Margin="10" FontSize="20" />
-                <MenuItem Header="Butaca" Margin="10" FontSize="20" />
-                <MenuItem Header="Proyecciones" Margin="10" FontSize="20" />
-            </Menu>
-           
+            <Grid HorizontalAlignment="Stretch">
+                <Grid.ColumnDefinitions >
+                    <ColumnDefinition Width="173*"  SharedSizeGroup="a"/>
+                    <ColumnDefinition Width="587*" SharedSizeGroup="b"/>
+                </Grid.ColumnDefinitions>
+                <Image   Source="images/pruebaaa.png" Margin="0,10,10,10" Stretch="Fill"/>
+                <Menu Grid.Column="1" Foreground="White" Background="Transparent" x:Name="menu1" Margin="0,28">
+
+                    <MenuItem Header="Usuario" Margin="10 " FontSize="20" />
+                    <MenuItem Header="Pelicula" Margin="10" FontSize="20" Click="MenuItem_Click" />
+                    <MenuItem Header="Butaca" Margin="10" FontSize="20" />
+                    <MenuItem Header="Proyecciones" Margin="10" FontSize="20" />
+                </Menu>
+
+
+
+            </Grid>
+
         </StackPanel>
     </Grid>
 </Window>
