--- a/Vistas/MenuPelicula.xaml
+++ b/Vistas/MenuPelicula.xaml
@@ -16,13 +16,13 @@
                 <ImageBrush ImageSource="/Vistas;component/images/prueba7.jpg" />
 
             </StackPanel.Background>
-            <Grid HorizontalAlignment="Stretch">
+            <Grid HorizontalAlignment="Stretch" Height="110">
                 <Grid.ColumnDefinitions >
                     <ColumnDefinition Width="173*"  SharedSizeGroup="a"/>
                     <ColumnDefinition Width="587*" SharedSizeGroup="b"/>
                 </Grid.ColumnDefinitions>
-                <Image   Source="images/pruebaaa.png" Margin="0,10,10,10" Stretch="Fill"/>
-                <Menu Grid.Column="1" Foreground="White" Background="Transparent" x:Name="menu1" Margin="0,28">
+                <Image   Source="images/pruebaaa.png" Margin="24,10,33,10" Stretch="Fill"/>
+                <Menu Grid.Column="1" Foreground="White" Background="Transparent" x:Name="menu1" Margin="0,28,10,24">
 
                     <MenuItem Header="Usuario" Margin="10 " FontSize="20" />
                     <MenuItem Header="Pelicula" Margin="10" FontSize="20" />
@@ -34,23 +34,37 @@
 
 
             </Grid>
-            <DataGrid Name="dgPelicula" Opacity="50" Height="264" Margin="34,0,38,0" SelectionChanged="DgPelicula_SelectionChanged"/>
+            <DataGrid Name="dgPelicula" Opacity="0.5" Foreground="White" Height="203" Background="Black" Margin="34,0,38,0" SelectionChanged="DgPelicula_SelectionChanged"/>
+            <Grid Height="215">
+                <Label Content="Titulo" FontSize="20" Foreground="White" HorizontalAlignment="Left" Margin="226,90,0,0" VerticalAlignment="Top"/>
+                <TextBox HorizontalAlignment="Left" Height="22" Margin="409,97,0,0" TextWrapping="Wrap" Text="TextBox" Background="Transparent" VerticalAlignment="Top" Width="120"/>
+                <Label Content="Duracion" FontSize="20" Foreground="White" HorizontalAlignment="Left" Margin="226,125,0,0" VerticalAlignment="Top"/>
+                <TextBox HorizontalAlignment="Left" Height="22" Background="Transparent" Margin="409,132,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
+                <Label Content="Genero" FontSize="20" Foreground="White" HorizontalAlignment="Left" Margin="226,165,0,0" VerticalAlignment="Top"/>
+                <Label Content="Clasificacion" FontSize="20" Foreground="White" HorizontalAlignment="Left" Margin="226,202,0,-24" VerticalAlignment="Top"/>
+                <ListBox HorizontalAlignment="Left" Background="Transparent" Height="24" Margin="409,169,0,0" VerticalAlignment="Top" Width="120"/>
+                <ListBox HorizontalAlignment="Left" Background="Transparent" Height="24" Margin="409,207,0,-16" VerticalAlignment="Top" Width="120"/>
 
+            </Grid>
+            
 
         </StackPanel>
-        <Grid HorizontalAlignment="Left" Height="74" Margin="96,189,0,0" VerticalAlignment="Top" Width="570">
+        <Grid HorizontalAlignment="Left" Height="130" Margin="98,430,0,0" VerticalAlignment="Top" Width="570">
+
+
             <Grid.RowDefinitions>
                 <RowDefinition Height="0*"/>
                 <RowDefinition/>
             </Grid.RowDefinitions>
 
-            <Menu Foreground="White" Background="Transparent"  Margin="116,236,92,-232" Grid.RowSpan="2">
+            <Menu Foreground="White" Background="Transparent"  Margin="97,-89,111,31">
 
-                <MenuItem Header="NUEVO" Margin="10 " FontSize="20" />
+                <MenuItem Header="NUEVO" Margin="10 " FontSize="20" Click="MenuItem_Click" />
                 <MenuItem Header="MODIFICAR" Margin="10" FontSize="20" />
                 <MenuItem Header="ELIMINAR" Margin="10" FontSize="20" />
 
             </Menu>
+
         </Grid>
 
     </Grid>
