--- a/Vistas/MenuButaca.xaml
+++ b/Vistas/MenuButaca.xaml
@@ -30,11 +30,28 @@
                     <MenuItem Header="Proyecciones" Margin="10" FontSize="20" Click="MenuItem_Click" />
                 </Menu>
 
+            </Grid>
 
+            <Grid Background="Black" Opacity="0.5" Width="600" Height="200">
+                <Button  Width="50" Height="50" Margin="199,83,351,67"/>
+                <Button Width="50" Height="50" Margin="140,81,410,69"/>
+                <Button Height="50" Margin="138,6,231,144" />
+                <Button Width="50" Height="50" Margin="258,83,292,67" />
+                <Button Width="50" Height="50" Margin="259,139,291,11" />
+                <Button Width="50" Height="50" Margin="201,139,349,11" />
+                <Button Width="50" Height="50" Margin="141,137,409,13" />
+                <Button Width="50" Height="50" Margin="317,83,233,67" />
+                <Button Width="50" Height="50" Margin="319,139,231,11" />
 
 
             </Grid>
-            <DataGrid Name="dgButaca" Opacity="0.5" Foreground="White" Height="203" Background="Black" Margin="34,0,38,0"/>
+
+
+
+
+
+
+
             <Grid Height="215">
                 <Label Content="Titulo" FontSize="20" Foreground="White" HorizontalAlignment="Left" Margin="226,90,0,0" VerticalAlignment="Top"/>
                 <TextBox HorizontalAlignment="Left" Height="22" Margin="409,97,0,0" TextWrapping="Wrap" Text="TextBox" Background="Transparent" VerticalAlignment="Top" Width="120"/>
