--- a/Vistas/Asignacion de Butacas.xaml
+++ b/Vistas/Asignacion de Butacas.xaml
@@ -5,8 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Vistas"
         mc:Ignorable="d"
-        Title="Asignacion_de_Butacas" Height="473.936" Width="811.17">
-    <Grid>
+        Title="Asignacion_de_Butacas" Height="577.659" Width="819.149">
+    <Grid Margin="35,0,0,96">
         <Grid.Background>
             <ImageBrush ImageSource="images/prueba 14.jpg"/>
         </Grid.Background>
@@ -20,7 +20,7 @@
             <Label Content="G" Background="#FFF5F3F3" Height="50" Margin="0,0,10,0" />
 
         </StackPanel>
-        <StackPanel HorizontalAlignment="Left" Height="356" Margin="98,77,0,0" VerticalAlignment="Top" Width="654">
+        <StackPanel HorizontalAlignment="Left" Height="357" Margin="98,77,0,0" VerticalAlignment="Top" Width="641">
             <Button Content="1" Height="50" Margin="0,0,578,0"/>
             <Button Content="1" Height="50" Margin="0,0,578,0"/>
             <Button Content="1" Height="50" Margin="0,0,578,0"/>
@@ -31,6 +31,21 @@
 
         </StackPanel>
 
+        <Button Name="btn1" Background="Pink" 
+        BorderBrush="Black" BorderThickness="1" 
+        Click="OnClick1" ClickMode="Hover" HorizontalAlignment="Left" Width="127" Margin="476,77,0,278">
+            ClickMe1
+        </Button>
 
+        <Button Name="btn2" Background="LightBlue" 
+        BorderBrush="Black" BorderThickness="1" 
+        Click="OnClick2" ClickMode="Press" Margin="300,81,350,278">
+            ClickMe2
+        </Button>
+
+        <Button Name="btn3" 
+        Click="OnClick3" ClickMode="Release" Margin="329,215,238,154">
+            Reset
+        </Button>
     </Grid>
 </Window>
