--- a/Vistas/menuVendedor.xaml
+++ b/Vistas/menuVendedor.xaml
@@ -6,11 +6,11 @@
         xmlns:local="clr-namespace:Vistas"
         mc:Ignorable="d"
            WindowStartupLocation="CenterScreen"
-         Icon="images/cine.ico"  Height="601" Width="756" >
-    <Grid>
+         Icon="images/cine.ico"  Height="399.913" Width="911.898" >
+    <Grid Margin="0,0,0,127">
 
 
-        <StackPanel  Height="570" Margin="0,-4,-12,0" Name="stackPanel2" VerticalAlignment="Top">
+        <StackPanel  Height="377" Margin="0,0,0,-277" Name="stackPanel2" VerticalAlignment="Top">
             <StackPanel.Background>
                 <ImageBrush ImageSource="/Vistas;component/images/prueba7.jpg" />
 
@@ -21,58 +21,21 @@
                     <ColumnDefinition Width="587*" SharedSizeGroup="b"/>
                 </Grid.ColumnDefinitions>
                 <Image   Source="images/pruebaaa.png" Margin="24,10,33,10" Stretch="Fill"/>
-                <Menu Grid.Column="1" Foreground="White" Background="Transparent" x:Name="menu1" Margin="0,28,10,24">
+                <Menu Grid.Column="1" Foreground="White" Background="Transparent" x:Name="menu1" Margin="0,28,10,0">
 
-                    <MenuItem Header="Usuario" Margin="10 " FontSize="20" />
-                    <MenuItem Header="Pelicula" Margin="10" FontSize="20" />
-                    <MenuItem Header="Butaca" Margin="10" FontSize="20" />
-                    <MenuItem Header="Proyecciones" Margin="10" FontSize="20" />
+                    <MenuItem Header="Cliente" Margin="10 " FontSize="20" />
+                    <MenuItem Header="Ticket" Margin="10" FontSize="20" />
+                    <MenuItem Header="Salir" Margin="10" FontSize="20" />
+
                 </Menu>
 
 
 
 
             </Grid>
-            <DataGrid Name="dgPelicula" Opacity="0.5" Foreground="White" Height="203" Background="Black" Margin="34,0,38,0" />
-            <Grid Height="215">
-                <Label Content="Titulo" FontSize="20" Foreground="White" HorizontalAlignment="Left" Margin="226,28,0,0" VerticalAlignment="Top"/>
-                <TextBox HorizontalAlignment="Left" Foreground="White" Height="22" Margin="409,35,0,0" TextWrapping="Wrap" Text="TextBox" Background="Transparent" VerticalAlignment="Top" Width="120"/>
-                <Label Content="Duracion"  FontSize="20" Foreground="White" HorizontalAlignment="Left" Margin="226,63,0,0" VerticalAlignment="Top"/>
-                <TextBox HorizontalAlignment="Left" Height="22" Foreground="White" Background="Transparent" Margin="409,70,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
-                <Label Content="Genero" FontSize="20" Foreground="White" HorizontalAlignment="Left" Margin="226,103,0,0" VerticalAlignment="Top"/>
-                <Label Content="Clasificacion" FontSize="20" Foreground="White" HorizontalAlignment="Left" Margin="226,142,0,0" VerticalAlignment="Top"/>
-                <ListBox HorizontalAlignment="Left" Foreground="White" Background="Transparent" Height="24" Margin="409,109,0,0" VerticalAlignment="Top" Width="120">
-                    <TabItem Content="Comedia"/>
-                    <TabItem Content="drama"/>
-                </ListBox>
-                <ListBox HorizontalAlignment="Left" Foreground="White" Background="Transparent" Height="24" Margin="409,147,0,0" VerticalAlignment="Top" Width="120"/>
-
-            </Grid>
 
 
         </StackPanel>
-        <Grid HorizontalAlignment="Left" Height="130" Margin="98,426,0,0" VerticalAlignment="Top" Width="570">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="0*"/>
-                <ColumnDefinition Width="81*"/>
-                <ColumnDefinition Width="109*"/>
-            </Grid.ColumnDefinitions>
-
-
-            <Grid.RowDefinitions>
-                <RowDefinition Height="0*"/>
-                <RowDefinition/>
-            </Grid.RowDefinitions>
-
-            <Menu Foreground="White" Background="Transparent"  Margin="97,73,111,-1" Grid.RowSpan="2" Grid.ColumnSpan="3">
-
-                <MenuItem Header="NUEVO" Margin="10 " FontSize="20"/>
-                <MenuItem Header="MODIFICAR" Margin="10" FontSize="20" />
-                <MenuItem Header="ELIMINAR" Margin="10" FontSize="20" />
-
-            </Menu>
-
-        </Grid>
 
     </Grid>
 </Window>
