--- a/Vistas/Pelicula.xaml
+++ b/Vistas/Pelicula.xaml
@@ -24,10 +24,10 @@
                 <Image   Source="images/pruebaaa.png" Margin="24,10,33,10" Stretch="Fill"/>
                 <Menu Grid.Column="1" Foreground="White" Background="Transparent" x:Name="menu1" Margin="0,28,10,24">
 
-                    <MenuItem Header="Usuario" Margin="10 " FontSize="20" />
+                   />
                     <MenuItem Header="Pelicula" Margin="10" FontSize="20" />
-                    <MenuItem Header="Butaca" Margin="10" FontSize="20"  Name="btnButaca" Click="BtnButaca_Click"/>
-                    <MenuItem Header="Proyecciones" Margin="10" FontSize="20" />
+                    <MenuItem Header="Atras" Margin="10" FontSize="20" Name="mAtras" Click="MAtras_Click"   />
+                   />
                 </Menu>
 
 
@@ -37,7 +37,7 @@
             <DataGrid Name="dgPelicula" Opacity="0.5" Foreground="White" Height="198" Background="Black" Margin="34,0,38,0" SelectionChanged="DgPelicula_SelectionChanged"/>
             <Grid Height="215">
                 <Label Content="Titulo" FontSize="20" Foreground="White" HorizontalAlignment="Left" Margin="270,49,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.695,-1.534"/>
-                <TextBox HorizontalAlignment="Left" Height="22" Margin="419,62,0,0" TextWrapping="Wrap" Text="TextBox" Background="Transparent" VerticalAlignment="Top" Width="120"/>
+                <TextBox HorizontalAlignment="Left" Height="22" Margin="419,62,0,0" TextWrapping="Wrap"  Background="Transparent" VerticalAlignment="Top" Width="120"/>
                 <Label Content="Duracion" FontSize="20" Foreground="White" HorizontalAlignment="Left" Margin="270,90,0,0" VerticalAlignment="Top"/>
                 <TextBox HorizontalAlignment="Left" Height="22" Background="Transparent" Margin="419,103,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
                 <Label Content="Genero" FontSize="20" Foreground="White" HorizontalAlignment="Left" Margin="270,135,0,0" VerticalAlignment="Top"/>
