--- a/Vistas/WinPelicula.xaml
+++ b/Vistas/WinPelicula.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="Vistas.Pelicula"
+﻿<Window x:Class="Vistas.WinPelicula"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -59,7 +59,7 @@
 
             <Menu Foreground="White" Background="Transparent"  Margin="-69,59,485,10" Grid.RowSpan="2">
 
-                <MenuItem Header="NUEVO" Margin="10 " FontSize="20" Click="MenuItem_Click" />
+                <MenuItem Header="NUEVO" Margin="10 " FontSize="20" />
                 <MenuItem Header="MODIFICAR" Margin="10" FontSize="20" />
                 <MenuItem Header="ELIMINAR" Margin="10" FontSize="20" />
 
